# Partitions_Linux

./: README.md
debian/gpt/: gpt_lsblk.txt  gpt_parted.txt
debian/mbr/: mbr_fdisk.txt  mbr_lsblk.txt  mbt_parted.txt
docs/: automation.md  gpt_output_debian.txt  gpt_output_kali.txt  gpt_setup.md  lab_setup.md  mbr_output_debian.txt  mbr_setup.md
partitions/: CMakeLists.txt
partitions/src/: DiskStructures.h  main.cpp
partitions/src/GPT/: GPTTable.cpp  GPTTable.h
partitions/src/MBR/: MBRTable.cpp  MBRTable.h
partitions/src/PartitionTable/: PartitionTable.h
result/debian/gpt/: gpt_sgdisk.txt
result/kali/gpt/: gpt_fdisk_kali.txt  gpt_lsblk_kali.txt  gpt_parted_kali.txt
result/kali/mbr/: mbr_fdisk_kali.txt  mbr_lsblk_kali.txt  mbr_parted_kali.txt
result/output/: mbr_output_kali.txt
scripts/: fstab_add.sh  gpt_create_128.sh  mbr_create_max.sh  mbr_create_random.sh
src/: partitions.cpp
